# ml

./: .gitignore  pyproject.toml
ml_zoomcamp/: mlzoomhw_1.ipynb
tests/: test_ml_zoomcamp.py
